--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.1.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "jspdf": "^2.5.2",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "react": "^18.3.1",
